sfdx-source/apex-queue/main/objects/Processor__mdt/Processor__mdt.object-meta.xml
<CustomObject>
    <description>Registers job processor classes and execution settings used by the Apex queue runtime.</description>
    <label>Processor</label>
    <pluralLabel>Processors</pluralLabel>
</CustomObject>