sfdx-source/apex-queue/main/objects/Processor__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Optional description of the processor behavior and expected work.</description>
    <inlineHelpText>Describe what this processor does, expected data, and important operational notes.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>