sfdx-source/apex-queue/main/objects/Processor__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether this queue and job mapping may be resolved to an Apex processor at runtime.</description>
    <inlineHelpText>Controls whether this queue/job processor mapping can be resolved by workers.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>