sfdx-source/apex-queue/main/objects/Processor__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Job name handled by the registered processor mapping.</description>
    <inlineHelpText>Job name used when resolving a worker implementation.</inlineHelpText>
    <label>Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>