sfdx-source/apex-queue/main/objects/Processor__mdt/fields/ProcessorClass__c.field-meta.xml
<CustomField>
    <fullName>ProcessorClass__c</fullName>
    <description>Fully qualified Apex class name that implements the queue processor contract.</description>
    <inlineHelpText>Example: InvoiceSyncProcessor or OuterClass.InvoiceSyncProcessor.</inlineHelpText>
    <label>Processor Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>